--- a/mocks.html
+++ b/mocks.html
@@ -536,12 +536,7 @@
       datasets: [{
         label: '% Correct',
         data: values,
-        segment: {
-          borderColor: ctx =>
-            ctx.p1.parsed.y >= ctx.p0.parsed.y
-              ? '#19A861'
-              : '#D62C2C'
-        },
+        borderColor: '#79EF94',
         fill: false,
         tension: 0.1,
         pointRadius: 4
