--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@
             label: '% Correct',
             data: values,
             borderColor: '#79EF94',
-            fill: false,
+            backgroundColor: 'rgba(121,239,148,0.2)',
+            fill: true,
             tension: 0.1,
             pointRadius: 4
           }]
