--- a/mocks.html
+++ b/mocks.html
@@ -29,7 +29,11 @@
     }
     /* Override Bootstrap success color for progress bars */
     .progress-bar.bg-success {
-      background-color: #19A861 !important;
+      background-color: #78EE95 !important;
+    }
+    /* Override Bootstrap danger color for progress bars */
+    .progress-bar.bg-danger {
+      background-color: #F83D50 !important;
     }
     /* Change unfilled progress bar background */
     .progress {
