--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
     }
     /* Override Bootstrap success color for progress bars */
     .progress-bar.bg-success {
-      background-color: #78EE95 !important;
-    }
-    /* Override Bootstrap danger color for progress bars */
-    .progress-bar.bg-danger {
-      background-color: #F83D50 !important;
+      background-color: #19A861 !important;
     }
     /* Change unfilled progress bar background */
     .progress {
