--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 </div>
 <div id="tracker-ui" style="display:none;">
   <div class="container-fluid mt-5">
-    <div class="d-flex align-items-center mb-4 ms-4">
+    <div class="d-flex align-items-baseline mb-4 ms-4">
       <h1 class="mb-0">UCAT Tracker</h1>
-      <a href="mocks.html" class="ms-3" style="font-size:0.9em; text-decoration:none;">→ Mock Tracker</a>
+      <a href="mocks.html" class="ms-3" style="font-size:1.25em; text-decoration:none;">→ Mock Tracker</a>
     </div>
     <div class="mx-auto" style="max-width:2000px; border:1px solid #ccc; padding:1rem;">
     <!-- Card for entering a new score -->
