--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           datasets: [{
             label: '% Correct',
             data: values,
-            borderColor: '#79EF94',
+            borderColor: '#14C784',
             backgroundColor: 'rgba(121,239,148,0.2)',
             fill: true,
             tension: 0.1,
