--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    /* Theme variables */
+    :root {
+      --bg: #ffffff;
+      --text: #000000;
+      --card-bg: #ffffff;
+      --header-bg: #f8f9fa;
+      --table-row-alt: #f2f2f2;
+    }
+    .dark-mode {
+      --bg: #121212;
+      --text: #e0e0e0;
+      --card-bg: #1e1e1e;
+      --header-bg: #1c1c1c;
+      --table-row-alt: #1a1a1a;
+    }
+    body {
+      background-color: var(--bg) !important;
+      color: var(--text) !important;
+    }
+    .card, .navbar, .d-flex.justify-content-between {
+      background-color: var(--card-bg) !important;
+    }
+    table.table-sm tr:nth-child(odd) {
+      background-color: var(--table-row-alt) !important;
+    }
+    table.table-sm tr:nth-child(even) {
+      background-color: var(--bg) !important;
+    }
+
     /* Use Apple’s SF Pro system font stack */
     html, body, input, button, select, textarea {
       font-family: -apple-system, 'SF Pro Text', 'SF Pro Display', 'Helvetica Neue', Arial, sans-serif;
@@ -70,15 +99,20 @@
       z-index: 1050;
     }
     .sticky-note {
-      background: #ffffff;       /* white background */
+      background: #ffffff;
       border: 1px solid #e0db7d;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       padding: 1rem;
       overflow: auto;
-      resize: both;             /* allow resize in both directions */
+      resize: both;
       position: relative;
       max-width: none !important;
       max-height: none !important;
+    }
+    .dark-mode .sticky-note {
+      background: #232323;
+      color: #e0e0e0;
+      border-color: #bdb76b;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -140,13 +174,16 @@
   </script>
 </head>
 <body>
-  <div class="d-flex justify-content-between align-items-center px-4 mt-2">
+  <div class="d-flex justify-content-between align-items-baseline px-4 mt-2">
     <div class="text-muted small">Emmanuel made</div>
-    <div id="user-info">
-      <div class="input-group input-group-sm">
-        <span class="input-group-text">😹</span>
-        <input type="text" id="usernameInput" class="form-control" placeholder="Username">
+    <div class="d-flex align-items-center">
+      <div id="user-info">
+        <div class="input-group input-group-sm">
+          <span class="input-group-text">😹</span>
+          <input type="text" id="usernameInput" class="form-control" placeholder="Username">
+        </div>
       </div>
+      <button id="themeToggle" class="btn btn-sm btn-outline-secondary ms-2" title="Toggle dark mode">🌙</button>
     </div>
   </div>
 <!-- Authentication UI -->
@@ -599,6 +636,19 @@
     });
 
     // Remove auto-resize for form review textarea
+
+    // Dark mode toggle
+    const themeToggle = document.getElementById('themeToggle');
+    // Apply stored preference
+    if (localStorage.getItem('darkMode') === 'true') document.documentElement.classList.add('dark-mode');
+    themeToggle.addEventListener('click', () => {
+      document.documentElement.classList.toggle('dark-mode');
+      const isDark = document.documentElement.classList.contains('dark-mode');
+      localStorage.setItem('darkMode', isDark);
+      themeToggle.textContent = isDark ? '☀️' : '🌙';
+    });
+    // Initialize button icon
+    themeToggle.textContent = document.documentElement.classList.contains('dark-mode') ? '☀️' : '🌙';
   </script>
 </div>
 </div>
