--- a/mocks.html
+++ b/mocks.html
@@ -258,7 +258,7 @@
           </div>
           <div class="me-3">
             <label for="filterText" class="form-label">Search:</label>
-            <input type="text" id="filterText" class="form-control" placeholder="Search...">
+            <input type="text" id="filterText" class="form-control" placeholder="Enter keywords...">
           </div>
         </div>
         <div class="table-responsive">
