--- a/mocks.html
+++ b/mocks.html
@@ -142,6 +142,9 @@
 <body>
   <div class="d-flex justify-content-between align-items-center px-4 mt-2">
     <div class="text-muted small">Emmanuel made</div>
+    <div id="recentUpdates" class="border border-secondary-subtle mx-3 px-2 py-1" style="font-size:0.9em; align-self:center;">
+      Loading recent updates...
+    </div>
     <div id="user-info">
       <div class="input-group input-group-sm">
         <span id="userEmoji" class="input-group-text">😹</span>
@@ -161,10 +164,6 @@
     <div class="d-flex align-items-baseline mb-4 ms-4">
       <h1 class="mb-0">Mock Tracker</h1>
       <a href="index.html" class="ms-3" style="font-size:1.25em; text-decoration:none;">→ UCAT Tracker</a>
-    </div>
-    <!-- Recent updates ticker -->
-    <div id="recentUpdates" class="alert alert-light text-center mb-4" style="font-size:0.9em;">
-      Loading recent updates...
     </div>
     <div class="mx-auto" style="max-width:2000px; border:1px solid #ccc; padding:1rem;">
     <!-- Card for entering a new score -->
