--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 <body>
   <div class="d-flex justify-content-between align-items-baseline px-4 mt-2">
     <div class="text-muted small">Emmanuel made</div>
+    <div id="recentUpdates" class="border border-secondary-subtle text-center mx-3 px-2 py-1" style="font-size:0.9em; align-self:center;">
+      Loading recent updates...
+    </div>
     <div class="d-flex align-items-center">
       <div id="user-info">
         <div class="input-group input-group-sm">
@@ -158,9 +161,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div id="recentUpdates" class="container-fluid bg-light py-1" style="font-size:0.9em;">
-    Loading recent updates...
   </div>
 <!-- Authentication UI -->
 <div id="auth-ui" class="container mt-4" style="display:none;">
